fix alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -190,7 +190,6 @@ a:focus {
     display: flex;
     align-items: center;
     gap: 1rem;
-    padding: .25rem .5rem;
     justify-content: center;
 }
 
